--- a/src/pages/main.module.scss
+++ b/src/pages/main.module.scss
@@ -1,247 +1,210 @@
 .root {
   max-width: 100%;
+  padding-top: 60px;
 
-  h1, h2 {
-    font-size: 45px;
-    color: #1b1d24;
-    line-height: 1.1875;
-  }
+  .demo-app {
+    height: 620px;
+    max-width: 100%;
 
-  p {
-    font-size: 20px;
-  }
-
-  @media (max-width: 600px) {
-    h1, h2 {
-      font-size: 38px;
-    }
-  }
-
-  /* @media (max-width: 800px) {
-    h1 {
-      margin-left: auto;
-      margin-right: auto;
-      font-size: 58px;
-    }
-  } */
-
-
-  .top {
-    padding-top: 60px;
-    margin-top: 40px;
-    flex-grow: 1;
-    background-color: #e8eff6;
-    // background-color: #2C2C32;
-    // alt. https://www.color-hex.com/color/f6efe8
-
-
-    .lead {
-
-      h6 {
-        font-size: 18px;
-      }
-
-      h1 {
-        margin-top: 12px;
-      }
+    :global(.MuiIconButton-root) {
+      border-radius: 0;
     }
 
-    .image {
+    .topbar {
       display: flex;
+      width: 100%;
+      height: 38px;
+      background-color: #343745;
+      box-shadow: inset 0 -1px 0 0 #3a3d4d;
+      border-top-left-radius: 6px;
+      border-top-right-radius: 6px;
       align-items: center;
-      justify-content: center;
+
+      .toolbar-buttons {
+        margin-left: 12px;
+        margin-right: 4px;
+
+        .toolbar-button {
+          border-radius: 50%;
+          width: 12px;
+          height: 12px;
+          margin-right: 9px;
+          display: inline-block;
+
+          &:global(.red) {
+            background-color: #ff6059;
+          }
+
+          &:global(.yellow) {
+            background-color: #ffbe2f;
+          }
+          &:global(.green) {
+            background-color: #2aca41;
+          }
+        }
+      }
+
+      .browser-buttons {
+        display: flex;
+        max-height: 100%;
+        border-left: 1px solid #3a3d4d;
+
+        :global(.MuiIconButton-root) {
+          max-width: 39px;
+          border-right: 1px solid #3a3d4d;
+          box-shadow: inset 0 -1px 0 0 #3a3d4d;
+
+          &:hover {
+            background-color: #272934;
+          }
+
+          :global(.MuiSvgIcon-root) {
+            font-size: 16px;
+            color: #9B9DAB;
+          }
+        }
+      }
+
+    }
+
+    .main {
+      display: grid;
       height: 100%;
-      margin-left: 100px;
+      grid-template-columns: 50px auto;
+      grid-template-areas:'sidebar content';
 
-      img {
-        align-self: center;
-        max-width: 100%;
-      }
-    }
-  }
-
-  .demo {
-    padding-top: 80px;
-
-    :global(.MuiContainer-root) {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-
-      .demo-title {
-        max-width: 800px;
-        display: flex;
-        align-items: center;
-        flex-direction: column;
-
-        p {
-          font-size: 18px;
-          font-weight: 500;
-          line-height: 1.33;
-          color: #484a53;
-        }
-      }
-
-      .demo-description {
-        font-size: 20px;
-      }
-
-      .product-image {
+      .sidebar {
+        grid-area: sidebar;
         display: flex;
         flex-direction: column;
-        margin-top: 40px;
+        justify-content: space-between;
+        height: 100%;
+        background-color: #272934;
+        border-bottom-left-radius: 6px;
 
-        .product-image-topbar {
-          height: 24px;
-          background: #0b141c;
-          border-top-right-radius: 4px;
-          border-top-left-radius: 4px;
+        :global(.sidebar-button) {
+          -webkit-app-region: no-drag;
           display: flex;
-          align-items: center;
-
-          .product-image-topbar-buttons {
-            padding-left: 0.8rem;
-
-            .product-image-topbar-button-red, .product-image-topbar-button-yellow, .product-image-topbar-button-green {
-              border-radius: 50%;
-              width: 8px;
-              height: 8px;
-              margin-right: 6px;
-              display: inline-block;
-            }
-
-            .product-image-topbar-button-red {
-              background-color: #ff6059;
-            }
-
-            .product-image-topbar-button-yellow {
-              background-color: #ffbe2f;
-            }
-
-            .product-image-topbar-button-green {
-              background-color: #2aca41;
-            }
-          }
-        }
-
-        .product-image-topbar-nav {
-          height: 24px;
+          justify-content: center;
+          max-height: 45px;
           width: 100%;
-          background: #333335;
-          display: flex;
-          align-items: center;
-          padding: 0 6px;
-          border-bottom: 1px solid #202020;
+          box-shadow: inset -1px 0 0 0 #3a3d4d;
 
-          .product-image-topbar-nav-buttons {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-
-            svg {
-              font-size: 18px;
-              color: gray;
-              margin-left: 8px;
-            }
+          &:hover {
+            background-color: #313342;
           }
 
-          .product-image-topbar-nav-omnibox {
-            margin-left: 30px;
-            height: 18px;
-            width: 80%;
-            border-radius: 8px;
-            background-color: #48484A;
-            display: flex;
-            align-items: center;
-            padding: 0 6px;
-            font-size: 9px;
-            color: gray;
-
-            svg {
-              font-size: 10px;
-              margin-right: 8px;
-            }
-          }
-
-          .product-image-topbar-nav-right {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            width: 16%;
-            padding: 0 8px;
+          :global(.MuiSvgIcon-root) {
+            font-size: 20px;
+            color: #9B9DAB;
           }
         }
+
+        .sidebar-top {
+          display: flex;
+          flex-direction: inherit;
+
+          :global(.sidebar-button.search-button) {
+            border-bottom: 1px solid #343745;
+            margin-bottom: 4px;
+          }
+
+          :global(.sidebar-avatar) {
+            display: flex;
+            max-width: 100%;
+            height: 50px;
+            width: 50px;
+            -webkit-app-region: no-drag;
+
+            :hover {
+              img {
+                opacity: 1;
+              }
+            }
+
+            :global(.MuiIconButton-root) {
+              max-width: 100%;
+            }
+
+            img {
+              opacity: 0.5;
+              width: 36px;
+              height: 36px;
+              border-radius: 50%;
+              border-width: 1px;
+              border-style: solid;
+            }
+
+            &:global(.active) {
+              img {
+                opacity: 1;
+              }
+            }
+          }
+        }
+
+        .sidebar-bottom {
+          display: flex;
+          flex-direction: inherit;
+
+          :global(.sidebar-button.slack-button) {
+            position: relative;
+
+            :global(.MuiSvgIcon-root) {
+              font-size: 26px;
+            }
+
+            :global(.unread-badge) {
+              position: absolute;
+              background-color: #895be5;
+              height: 18px;
+              min-width: 18px;
+              font-size: 11px;
+              top: 4px;
+              left: initial;
+              right: 4px;
+              user-select: none;
+              display: flex;
+              padding: 3px;
+              color: #fff;
+              font-weight: 700;
+              line-height: 12px;
+              border-radius: 50%;
+
+              :global(.unread-badge-inner) {
+                margin: auto;
+                height: 10px;
+              }
+            }
+          }
+
+          :global(.sidebar-button.more-button), :global(.sidebar-button.add-button) {
+            border-top: 1px solid #343745;
+          }
+
+          :global(.sidebar-button.add-button) {
+            :global(.MuiSvgIcon-root) {
+              font-size: 34px;
+            }
+          }
+        }
+
+      }
+
+      .content {
+        grid-area: content;
+        display: flex;
+        height: 100%;
+        overflow: hidden;
+        background-color: white;
+        border-top-left-radius: 6px;
+        border-bottom-right-radius: 6px;
 
         img {
-          width: 100%;
-          object-fit: cover;
-          border-bottom-right-radius: 4px;
-          border-bottom-left-radius: 4px;
-          image-rendering: -moz-crisp-edges;
-          image-rendering: -o-crisp-edges;
-          image-rendering: -webkit-optimize-contrast;
+          max-width: 100%;
         }
-      }
-    }
-
-    .feature-grid {
-      width: 100%;
-      display: flex;
-      margin-top: 100px;
-
-      h4 {
-        font-size: 24px;
-      }
-
-      p {
-        font-size: 18px;
-      }
-
-      .feature-grid-item {
-        max-width: 340px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-
-        .feature-grid-item-icon {
-
-          svg {
-            font-size: 56px;
-          }
-        }
-        .feature-grid-item-info {
-
-        }
-      }
-    }
-  }
-
-  .summary {
-    margin-top: 60px;
-    background-color: #fdebd4;
-    padding: 40px 0;
-
-    .summary-image {
-      display: flex;
-      justify-content: center;
-
-      img {
-        max-width: 60%;
-      }
-    }
-
-    .summary-text-container {
-      height: 100%;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-
-      .summary-text-content {
-        max-height: 400px;
       }
     }
 
   }
-
 }
