--- a/src/components/demo-app/tab-manager.module.scss
+++ b/src/components/demo-app/tab-manager.module.scss
@@ -21,49 +21,80 @@
     padding: 20px 30px;
     color: #fff;
 
-    .root {
+    .close-tab-button {
+      display: none;
+    }
+
+    .tree-view-root {
       flex-grow: 1;
       max-width: 400;
 
+      & > :global(.MuiTreeItem-root) {
+        // border-bottom: 1px solid #343745;
+        margin-bottom: 6px;
+        margin-top: 6px;
+      }
+
       :global(.MuiTreeItem-root) {
-        margin-bottom: 4px;
-
-        &:hover > :global(.MuiTreeItem-content) {
-          background-color: #181920;
-        }
-
-        &:focus > :global(.MuiTreeItem-content), &:global(.Mui-selected) > :global(.MuiTreeItem-content) {
-          background-color: #2c3361;
-        }
-
-        &:focus > :global(.MuiTreeItem-content) :global(MuiTreeItem-label),
-        &:hover > :global(.MuiTreeItem-content) :global(MuiTreeItem-label),
-        &:global(.Mui-selected) > :global(.MuiTreeItem-content) :global(MuiTreeItem-label) {
-          background-color: 'transparent',
-        }
-
-        :global(.MuiTreeItem-content) {
-          margin-bottom: 12px;
-        }
-
         :global(.MuiTreeItem-iconContainer) {
           width: 20px;
         }
 
         :global(.MuiTreeItem-group) {
           margin-left: 14px;
+          margin-bottom: 6px;
+          margin-top: 6px;
         }
+      }
+    }
+
+    .group-tree-item-root {
+      &:hover > :global(.MuiTreeItem-content) {
+        background-color: transparent;
+      }
+
+      & > :global(.MuiTreeItem-content) {
+        padding-bottom: 12px;
+        padding-top: 12px;
+        border-bottom: 1px solid #343745;
+      }
+    }
+
+    .tab-tree-item-root {
+      :global(.MuiTreeItem-content) {
+        padding-left: 6px;
+        padding-right: 6px;
+      }
+
+      &:hover > :global(.MuiTreeItem-content) {
+        background-color: #181920;
+
+        .close-tab-button {
+          display: flex;
+        }
+      }
+
+      &:global(.Mui-selected) > :global(.MuiTreeItem-content) {
+        background-color: #2c3361;
+      }
+
+      &:global(.Mui-selected) :global(.MuiTreeItem-content .MuiTreeItem-label) {
+        background-color: transparent;
       }
 
       :global(.MuiTreeItem-label) {
         :global(.child-label-title) {
+          user-select: none;
           white-space: nowrap;
           overflow: hidden;
           text-overflow: ellipsis;
           font-size: 14px;
-          width: 270px;
+          width: 265px;
+          padding-top: 6px;
+          padding-bottom: 6px;
         }
       }
     }
+
   }
 }
