--- a/src/components/demo-app/demo-app.module.scss
+++ b/src/components/demo-app/demo-app.module.scss
@@ -1,6 +1,7 @@
 .demo-app {
   height: 620px;
   max-width: 100%;
+  position: relative;
 
   :global(.MuiIconButton-root) {
     border-radius: 0;
@@ -9,6 +10,8 @@
   .topbar {
     display: flex;
     width: 100%;
+    max-width: 100%;
+    overflow: hidden;
     height: 38px;
     background-color: #343745;
     box-shadow: inset 0 -1px 0 0 #3a3d4d;
@@ -19,6 +22,7 @@
     .toolbar-buttons {
       margin-left: 12px;
       margin-right: 4px;
+      flex-shrink: 0;
 
       .toolbar-button {
         border-radius: 50%;
@@ -70,11 +74,14 @@
     .topbar-inner {
       height: 100%;
       display: flex;
-      flex: 1;
+      flex-grow: 1;
+      max-width: 100%;
+      overflow: auto;
       justify-content: space-between;
 
       .topbar-left {
         height: 100%;
+        max-width: 92%;
         display: flex;
         flex-grow: 1;
 
@@ -84,11 +91,14 @@
         }
 
         .tabs {
+          max-width: 100%;
           display: flex;
           flex-grow: 1;
           flex-wrap: nowrap;
+          overflow: auto;
 
           .tab {
+            overflow: auto;
             position: relative;
             display: flex;
             flex-basis: 230px;
@@ -237,6 +247,7 @@
 
         :global(.sidebar-avatar) {
           display: flex;
+          flex-shrink: 0;
           max-width: 100%;
           height: 50px;
           width: 50px;
@@ -304,6 +315,37 @@
           }
         }
 
+        :global(.sidebar-button.slack-button-2) {
+          position: relative;
+
+          :global(.MuiSvgIcon-root) {
+            font-size: 26px;
+          }
+
+          :global(.unread-badge) {
+            position: absolute;
+            background-color: #5b8be5;
+            height: 18px;
+            min-width: 18px;
+            font-size: 11px;
+            top: 4px;
+            left: initial;
+            right: 4px;
+            user-select: none;
+            display: flex;
+            padding: 3px;
+            color: #fff;
+            font-weight: 700;
+            line-height: 12px;
+            border-radius: 50%;
+
+            :global(.unread-badge-inner) {
+              margin: auto;
+              height: 10px;
+            }
+          }
+        }
+
         :global(.sidebar-button.more-button), :global(.sidebar-button.add-button) {
           border-top: 1px solid #343745;
         }
@@ -328,8 +370,8 @@
       height: 100%;
       overflow: hidden;
       background-color: white;
-      // border-top-left-radius: 6px;
       border-bottom-right-radius: 6px;
+      box-shadow: 0 10px 16px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
 
       img {
         max-width: 100%;
