--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -22,6 +22,11 @@ body {
   background-color: inherit;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  background-color: #F2E880;
+  background-image: url("/bg.jpg");
+  background-position: right bottom;
+  background-repeat: no-repeat;
 }
 
 h1, h2, h3, h4, h5, h6 {
