Add hover button color

--- a/src/components/demo-app/tab-manager.module.scss
+++ b/src/components/demo-app/tab-manager.module.scss
@@ -59,6 +59,12 @@
         padding-top: 12px;
         border-bottom: 1px solid #343745;
       }
+
+      :global(.MuiIconButton-root:hover) {
+        svg {
+          color: #fff !important;
+        }
+      }
     }
 
     .tab-tree-item-root {
